--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -4,6 +4,10 @@ channels:
  - conda-forge
 dependencies:
  - black
+ - flake8
+ - flake8-bugbear
+ - flake8-docstrings
+ - isort
  - jupyter
  - memory_profiler
  - mordred
@@ -21,3 +25,4 @@ dependencies:
  - snakeviz
  - sphinxcontrib-napoleon
  - sqlalchemy
+ - tox
