added tox configuration check

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py39
 isolated_build = True
 
 [testenv]
-deps = black
+deps = black, isort
 commands =
+    isort --check .
     black --check .
