added additional checks to tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,18 @@ envlist = py39
 isolated_build = True
 
 [testenv]
-deps = black, isort
+deps =
+    black
+    flake8
+    flake8-bugbear
+    flake8-docstrings
+    isort
+    jupyter-black
+    mypy
+    pylint
 commands =
-    isort --check .
     black --check .
+    isort --check .
+    flake8 .
+    mypy .
+    pylint pickaxe_generic
