--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -21,7 +21,9 @@ jobs:
         environment-file: environment.yml
     - name: Install with pip
       shell: ${{ matrix.shell }}
-      run: pip install -e .
+      run: |
+        pip install -e .
     - name: Test imports
       shell: ${{ matrix.shell }}
-      run: python -c "import pickaxe_generic"
+      run: |
+        python -c "import pickaxe_generic"
