--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -8,9 +8,9 @@ jobs:
         os: [ubuntu-latest,windows-latest]
         include:
           - os: ubuntu-latest
-            shell: "bash -l {0}"
+            shellvar: "bash -l {0}"
           - os: windows-latest
-            shell: "cmd /C CALL {0}"
+            shellvar: "cmd /C CALL {0}"
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -20,10 +20,10 @@ jobs:
         cache-downloads: true
         environment-file: environment.yml
     - name: Install with pip
-      shell: ${{ matrix.shell }}
+      shell: ${{ matrix.shellvar }}
       run: |
         pip install -e .
     - name: Test imports
-      shell: ${{ matrix.shell }}
+      shell: ${{ matrix.shellvar }}
       run: |
         python -c "import pickaxe_generic"
