--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -15,9 +15,14 @@ jobs:
     - name: Install Conda environment from Micromamba
       uses: mamba-org/provision-with-micromamba@main
       with:
-        channel-priority: flexible
         environment-file: environment.yml
     - name: Install with pip (Linux)
       run: pip install -e .
     - name: Test imports
-      run: python -c "import pickaxe_generic"
+      run: |
+        python -c "import pickaxe_generic.containers"
+        python -c "import pickaxe_generic.datatypes"
+        python -c "import pickaxe_generic.engine"
+        python -c "import pickaxe_generic.filters"
+        python -c "import pickaxe_generic.strategies"
+        python -c "import pickaxe_generic.utils"
