--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -1,7 +1,7 @@
 name: pg-basic
 on: push
 jobs:
-  check-imports-linux:
+  check-install-linux:
     strategy:
       fail-fast: true
       matrix:
