--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Install Conda environment from Micromamba
       uses: mamba-org/provision-with-micromamba@main
       with:
+        cache-env: true
         cache-downloads: true
         environment-file: environment.yml
     - name: Install with pip
@@ -41,6 +42,7 @@ jobs:
     - name: Install Conda environment from Micromamba
       uses: mamba-org/provision-with-micromamba@main
       with:
+        cache-env: true
         cache-downloads: true
         environment-file: environment.yml
     - name: Install with pip
