--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -49,6 +49,8 @@ jobs:
       run: pip install -e .
     - name: Test imports
       run: >-
+        where python
+        where pip
         python -c "import pickaxe_generic.containers"
         python -c "import pickaxe_generic.datatypes"
         python -c "import pickaxe_generic.engine"
