--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         cache-env: true
         cache-downloads: true
-        environment-file: environment.yml
+        environment-file: test/environment-lint.yml
     - name: Install with pip
       run: pip install -e .
     - name: Test imports
@@ -28,6 +28,8 @@ jobs:
         python -c "import pickaxe_generic.filters"
         python -c "import pickaxe_generic.strategies"
         python -c "import pickaxe_generic.utils"
+    - name: Check formatting
+      run: tox
   test-install-windows:
     strategy:
       fail-fast: true
@@ -44,7 +46,7 @@ jobs:
       with:
         cache-env: true
         cache-downloads: true
-        environment-file: environment.yml
+        environment-file: test/environment-lint.yml
     - name: Install with pip
       run: pip install -e .
     - name: Test imports
@@ -55,3 +57,5 @@ jobs:
         python -c "import pickaxe_generic.filters"
         python -c "import pickaxe_generic.strategies"
         python -c "import pickaxe_generic.utils"
+    - name: Check formatting
+      run: tox
