--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -1,5 +1,10 @@
 name: pg-basic
-on: [push,pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - main
+      - dev
 jobs:
   test-install-unix:
     strategy:
