shifted flake8 config to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,21 @@
 requires = ["setuptools>=24.2.0","wheel"]
 build-backend = "setuptools.build_meta"
 
-[[tool.mypy.overrides]]
-module = "rdkit.*"
-ignore_missing_imports = true
-
 [tool.black]
 line-length = 80
+
+[tool.flake8]
+max-line-length = 80
+extend-ignore = ["E203"]
+docstring-convention = "numpy"
 
 [tool.isort]
 profile = "black"
 line_length = 80
+
+[[tool.mypy.overrides]]
+module = "rdkit.*"
+ignore_missing_imports = true
 
 [tool.pylint.format]
 max-line-length = "80"
