--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,11 @@ requires = ["setuptools>=24.2.0","wheel"]
 build-backend = "setuptools.build_meta"
 
 [[tool.mypy.overrides]]
-module = "rdkit.*"
+module = [
+    "rdkit.*",
+    "PIL.*",
+    "IPython.*"
+]
 ignore_missing_imports = true
 
 [tool.black]
