changed setup file

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = pickaxe_generic
-version = 0.3.1
+name = doranet
+version = 0.4.0
 author = "William Sprague"
 author_email = "wsprague@u.northwestern.edu"
 description = "A streamlined, generic rewrite of Pickaxe."
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/wsprague-nu/Pickaxe-Generic
+url = https://github.com/wsprague-nu/doranet
 classifiers =
     Programming Language :: Python :: 3
     Operating System :: OS Independent
