--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -10,25 +10,25 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest,macos-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
         shell: bash -l {0}
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Conda environment from Micromamba
-      uses: mamba-org/provision-with-micromamba@main
-      with:
-        cache-env: true
-        cache-downloads: true
-        environment-file: test/environment-lint.yml
-    - name: Install with pip
-      run: pip install -e .
-    - name: Test imports
-      run: python test/import_test.py
-    - name: Check formatting
-      run: tox
+      - uses: actions/checkout@v2
+      - name: Install Conda environment from Micromamba
+        uses: mamba-org/provision-with-micromamba@main
+        with:
+          cache-env: true
+          cache-downloads: true
+          environment-file: test/environment-lint.yml
+      - name: Install with pip
+        run: pip install -e .
+      - name: Test imports
+        run: python test/import_test.py
+      - name: Check formatting
+        run: ruff check
   test-install-windows:
     strategy:
       fail-fast: true
@@ -39,16 +39,16 @@ jobs:
       run:
         shell: powershell
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Conda environment from Micromamba
-      uses: mamba-org/provision-with-micromamba@main
-      with:
-        cache-env: true
-        cache-downloads: true
-        environment-file: test/environment-lint.yml
-    - name: Install with pip
-      run: pip install -e .
-    - name: Test imports
-      run: python test/import_test.py
-    - name: Check formatting
-      run: tox
+      - uses: actions/checkout@v2
+      - name: Install Conda environment from Micromamba
+        uses: mamba-org/provision-with-micromamba@main
+        with:
+          cache-env: true
+          cache-downloads: true
+          environment-file: test/environment-lint.yml
+      - name: Install with pip
+        run: pip install -e .
+      - name: Test imports
+        run: python test/import_test.py
+      - name: Check formatting
+        run: ruff check
