clarified ruff format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,9 @@ ignore_missing_imports = true
 line-length = 80
 
 [tool.ruff.format]
+quote-style = "double"
 line-ending = "lf"
+indent-style = "space"
 
 [tool.ruff.lint]
 select = ["E", "F", "B", "I", "SIM"]
