--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install with pip
         run: pip install -e .
       - name: Test imports
-        run: python test/import_test.py
+        run: pytest
       - name: Check formatting
         run: ruff check .
   test-install-windows:
@@ -49,6 +49,6 @@ jobs:
       - name: Install with pip
         run: pip install -e .
       - name: Test imports
-        run: python test/import_test.py
+        run: pytest
       - name: Check formatting
         run: ruff check .
