--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = 'doranet'
 version = '0.4.0'
 authors = [
     { name='William Sprague', email='wsprague@u.northwestern.edu' },
+    { name='Quan Zhang', email='quanzhang@northwestern.edu' },
 ]
 description = 'Python package for generating and analyzing chemical reaction networks'
 readme = 'README.md'
