--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = 'doranet'
-version = '0.4.0'
+version = '0.4.1'
 authors = [
     { name='William Sprague', email='wsprague@u.northwestern.edu' },
     { name='Quan Zhang', email='quanzhang@northwestern.edu' },
@@ -20,6 +20,7 @@ classifiers = [
 ]
 license = {file = "LICENSE"}
 dependencies = [
+    "ipython",
     "numpy",
     "pandas",
     "pillow",
