--- a/.gitignore
+++ b/.gitignore
@@ -577,3 +577,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks,visualstudio
+
+doc/source/_autosummary
