--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           pip list
       - name: Lint with Ruff
         run: |
-          pip install ruff
+          pip install .[test]
           ruff --output-format=github .
         continue-on-error: true
       - name: Test doranet with pytest
