--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = 'doranet'
-dynamic = ['version']
+version = '0.4.1a2'
 authors = [
     { name='William Sprague', email='wsprague@u.northwestern.edu' },
     { name='Quan Zhang', email='quanzhang@northwestern.edu' },
@@ -27,6 +27,12 @@ dependencies = [
     "pyarrow",
     "rdkit",
     "scipy",
+]
+
+[project.optional-dependencies]
+test = [
+    "ruff",
+    "pytest",
 ]
 
 [project.urls]
