--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,11 @@ jobs:
           pip list
       - name: Lint with Ruff
         run: |
-          pip install .[test]
-          ruff --output-format=github .
+          pip install .[lint]
+          ruff check --output-format=github .
+          ruff format --check --output-format=github .
         continue-on-error: true
       - name: Test doranet with pytest
         run: |
-          pip install pytest
+          pip install .[test]
           pytest
