--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install .
           pip list
-      - name: Lint with Ruff
+      - name: Lint with Ruff and mypy
         run: |
           pip install .[lint]
           ruff check --output-format=github .
