--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -33,9 +33,9 @@ jobs:
       - name: Lint with Ruff and mypy
         run: |
           pip install .[lint]
-          ruff check --output-format=github doranet
-          ruff format --check doranet
-          mypy doranet
+          ruff check --output-format=github ./doranet
+          ruff format --check ./doranet
+          mypy ./doranet
       - name: Test doranet with pytest
         run: |
           pip install .[test]
