--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -35,7 +35,7 @@ jobs:
           pip install .[lint]
           ruff check --output-format=github doranet
           ruff format --check doranet
-          mypy doranet -v
+          mypy doranet -v --no-install-types --follow-imports skip
       - name: Test doranet with pytest
         run: |
           pip install .[test]
