--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           pip install .[lint]
           ruff check --output-format=github doranet
-          ruff format --check doranet
+          ruff format -v --check doranet
       - name: Test doranet with pytest
         run: |
           pip install .[test]
