--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,8 +67,8 @@ ignore_missing_imports = true
 
 [tool.ruff]
 extend-include = ["*.ipynb"]
-line-length = 80
 indent-width = 4
+line-length = 80
 target-version = "py310"
 
 [tool.ruff.format]
@@ -79,6 +79,9 @@ quote-style = "double"
 [tool.ruff.lint]
 select = ["B", "D", "E", "F", "I", "PL", "SIM", "W"]
 ignore = ["D101","D102","D103","D105","PLR0911","PLR0912","PLR0913","PLR0915"]
+
+[tool.ruff.lint.per-file-ignores]
+"**/modules/synthetic/{Reaction_Smarts_Forward.py,Reaction_Smarts_Retro.py}" = ["E501"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
