added matplotlib to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 license = {file = "LICENSE"}
 dependencies = [
     "ipython",
+    "matplotlib",
     "networkx",
     "numpy",
     "pandas",
