--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,12 +61,13 @@ Issues = "https://github.com/wsprague-nu/doranet/issues"
 
 [[tool.mypy.overrides]]
 module = [
-    "rdkit.*",
-    "PIL.*",
     "IPython.*",
     "networkx.*",
+    "pandas.*",
     "pgthermo.*",
+    "PIL.*",
     "PyPDF2.*",
+    "rdkit.*",
 ]
 ignore_missing_imports = true
 
