--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Type check with Mypy
         run: |
           pip install .[lint]
-          mypy doranet
+          mypy --no-install-types doranet
       - name: Test doranet with pytest
         run: |
           pip install .[test]
