--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -33,12 +33,12 @@ jobs:
       - name: Lint with Ruff
         run: |
           pip install .[lint]
-          ruff check --output-format=github doranet
-          ruff format --diff doranet
+          ruff check --output-format=github .
+          ruff format --diff .
       - name: Type check with Mypy
         run: |
           pip install .[lint]
-          mypy --no-install-types doranet
+          mypy --no-install-types .
       - name: Test doranet with pytest
         run: |
           pip install .[test]
