remove line length checks on tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ ignore = ["D101","D102","D103","D105","PLR0911","PLR0912","PLR0913","PLR0915"]
 [tool.ruff.lint.per-file-ignores]
 "**/modules/synthetic/{Reaction_Smarts_Forward.py,Reaction_Smarts_Retro.py}" = ["E501"]
 "**.ipynb" = ["E501"]
+"test*" = ["E501"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
