--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = 'doranet'
-version = '0.5.6a1'
+version = '0.6.0a'
 authors = [
     { name='William Sprague', email='wsprague@u.northwestern.edu' },
     { name='Quan Zhang', email='quanzhang@northwestern.edu' },
@@ -13,10 +13,19 @@ description = 'Python package for generating and analyzing chemical reaction net
 readme = 'README.md'
 requires-python = '>=3.10'
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Development Status :: 3 - Alpha",
+    "Framework :: Hatch",
+    "Framework :: Pytest",
+    "Intended Audience :: Science/Research",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
-    "Development Status :: 2 - Pre-Alpha",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Topic :: Scientific/Engineering :: Chemistry",
 ]
 license = {file = "LICENSE"}
 dependencies = [
@@ -78,6 +87,14 @@ module = [
     "rdkit.*",
 ]
 
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
+]
+pythonpath = [
+    "src"
+]
+
 [tool.ruff]
 extend-include = ["*.ipynb"]
 indent-width = 4
@@ -85,13 +102,18 @@ line-length = 80
 target-version = "py310"
 
 [tool.ruff.format]
+docstring-code-format = true
 indent-style = "space"
 line-ending = "lf"
 quote-style = "double"
+skip-magic-trailing-comma = true
 
 [tool.ruff.lint]
 select = ["B", "D", "E", "F", "I", "PL", "SIM", "W"]
 ignore = ["D101","D102","D103","D105","PLR0911","PLR0912","PLR0913","PLR0915"]
+
+[tool.ruff.lint.isort]
+split-on-trailing-comma = false
 
 [tool.ruff.lint.per-file-ignores]
 "**/modules/synthetic/{Reaction_Smarts_Forward.py,Reaction_Smarts_Retro.py}" = ["E501"]
