--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "pypdf",
     "rdkit<=2023.9.5",
     "scipy",
+    "typing-extensions >=4.14, <5",
 ]
 
 [project.optional-dependencies]
